Update jenkins-startup.md